--- a/templates/grafica1.html
+++ b/templates/grafica1.html
@@ -16,6 +16,8 @@
           [ 3,      3.5],
           [ 6.5,    7]
         ]);*/
+        {% comment %} Safe para que pueda imprimir los headers {% endcomment %}
+        
         var data = google.visualization.arrayToDataTable({{values|safe}});
         /*
         var options = {
@@ -25,6 +27,8 @@
           legend: 'none'
         };
         */
+
+        {% comment %} Safe para que pueda imprimir los headers {% endcomment %}
 
         var options = {
           title: {{h_title|safe}} +' vs. '+ {{v_title|safe}},
