--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>
-            Hola mundo desde django
+            Hola mundo desde django, super
         </h1>
         <form action="proceso" method="POST">
            {% csrf_token %}
